kubernetes/monitoring/hubble/middleware.yaml
# middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: hubble-ui-auth
  namespace: kube-system
spec:
  basicAuth:
    secret: hubble-ui-auth
